--- a/src/app/shared/module/material/component/accelerator/accelerator.component.html
+++ b/src/app/shared/module/material/component/accelerator/accelerator.component.html
@@ -1,7 +1,12 @@
 <mat-form-field>
     <mat-label>{{label}}</mat-label>
     <input matInput [value]="(value || 'material.accelerator.unbound') | translate" [disabled]="!recording" (keydown)="onKeydown($event)" #input>
-    <button matSuffix mat-button (click)="onKeyboardClick(input)">
+    <button matSuffix mat-button (click)="onKeyboardClick(input)" title="Set Shortcut" *ngIf="!recording; else cancel">
         <mat-icon> keyboard </mat-icon>
     </button>
+    <ng-template #cancel>
+        <button matSuffix mat-button (click)="cancelSetShortcut()" title="Cancel Setting Shortcut">
+            <mat-icon> clear </mat-icon>
+        </button>
+    </ng-template>
 </mat-form-field>
