--- a/src/app/shared/module/poe/component/item-frame-influences/item-frame-influences.component.scss
+++ b/src/app/shared/module/poe/component/item-frame-influences/item-frame-influences.component.scss
@@ -1,5 +1,5 @@
-@import "./../../../../../../styles/variables";
+@import './../../../../../../styles/variables';
 
 .rose {
-  color: $red
+  color: $red;
 }
