--- a/src/app/shared/module/poe/component/item-frame-value-input/item-frame-value-input.component.html
+++ b/src/app/shared/module/poe/component/item-frame-value-input/item-frame-value-input.component.html
@@ -1,1 +1,1 @@
-<input (focus)="onFocus()" (blur)="onBlur()" (keyup)="onKeyUp()" #input>
+<input (focus)="onFocus()" (blur)="onBlur()" (keyup)="onKeyUp()" #input />
