--- a/src/app/layout/component/user-settings-help/user-settings-help.component.html
+++ b/src/app/layout/component/user-settings-help/user-settings-help.component.html
@@ -1,50 +1,63 @@
 <mat-card>
-    <mat-label>{{'help.faq' | translate}}</mat-label>
-    <mat-accordion>
-        <mat-expansion-panel>
-            <mat-expansion-panel-header>
-                <mat-panel-title> Q.: {{'help.browser-title' | translate}} </mat-panel-title>
-            </mat-expansion-panel-header>
-            <p>A.: <span [innerHTML]="'help.browser' | translate"></span></p>
-        </mat-expansion-panel>
-        <mat-expansion-panel>
-            <mat-expansion-panel-header>
-                <mat-panel-title> Q.: {{'help.graph-title' | translate}}
-                </mat-panel-title>
-            </mat-expansion-panel-header>
-            <p>A.: <span [innerHTML]="'help.graph' | translate"></span></p>
-            <button mat-button
-                (click)="openUrl('https://academy.datawrapper.de/article/136-histogram-min-max-median-mean')">
-                {{'help.graph-url' | translate}} </button>
-        </mat-expansion-panel>
-        <mat-expansion-panel>
-            <mat-expansion-panel-header>
-                <mat-panel-title> Q.: {{'help.dwm-title' | translate}}
-                </mat-panel-title>
-            </mat-expansion-panel-header>
-            <p>A.: <span [innerHTML]="'help.dwm' | translate"></span></p>
-        </mat-expansion-panel>
-        <mat-expansion-panel>
-            <mat-expansion-panel-header>
-                <mat-panel-title> Q.: {{'help.graphic-title' | translate}}
-                </mat-panel-title>
-            </mat-expansion-panel-header>
-            <p>A.: <span [innerHTML]="'help.graphic' | translate"></span> </p>
-        </mat-expansion-panel>
-        <mat-expansion-panel>
-            <mat-expansion-panel-header>
-                <mat-panel-title> {{'help.wiki-title' | translate}} </mat-panel-title>
-            </mat-expansion-panel-header>
-            <button mat-button
-                (click)="openUrl('https://github.com/PoE-Overlay-Community/PoE-Overlay-Community-Fork/wiki')">{{'help.wiki' | translate}}</button>
-        </mat-expansion-panel>
-        <mat-expansion-panel>
-            <mat-expansion-panel-header>
-                <mat-panel-title> {{'help.bug-title' | translate}}
-                </mat-panel-title>
-            </mat-expansion-panel-header>
-            <button mat-button
-                (click)="openUrl('https://github.com/PoE-Overlay-Community/PoE-Overlay-Community-Fork/issues')">{{'help.bug' | translate}}</button>
-        </mat-expansion-panel>
-    </mat-accordion>
+  <mat-label>{{ 'help.faq' | translate }}</mat-label>
+  <mat-accordion>
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title> Q.: {{ 'help.browser-title' | translate }} </mat-panel-title>
+      </mat-expansion-panel-header>
+      <p>A.: <span [innerHTML]="'help.browser' | translate"></span></p>
+    </mat-expansion-panel>
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title> Q.: {{ 'help.graph-title' | translate }} </mat-panel-title>
+      </mat-expansion-panel-header>
+      <p>A.: <span [innerHTML]="'help.graph' | translate"></span></p>
+      <button
+        mat-button
+        (click)="
+          openUrl('https://academy.datawrapper.de/article/136-histogram-min-max-median-mean')
+        "
+      >
+        {{ 'help.graph-url' | translate }}
+      </button>
+    </mat-expansion-panel>
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title> Q.: {{ 'help.dwm-title' | translate }} </mat-panel-title>
+      </mat-expansion-panel-header>
+      <p>A.: <span [innerHTML]="'help.dwm' | translate"></span></p>
+    </mat-expansion-panel>
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title> Q.: {{ 'help.graphic-title' | translate }} </mat-panel-title>
+      </mat-expansion-panel-header>
+      <p>A.: <span [innerHTML]="'help.graphic' | translate"></span></p>
+    </mat-expansion-panel>
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title> {{ 'help.wiki-title' | translate }} </mat-panel-title>
+      </mat-expansion-panel-header>
+      <button
+        mat-button
+        (click)="
+          openUrl('https://github.com/PoE-Overlay-Community/PoE-Overlay-Community-Fork/wiki')
+        "
+      >
+        {{ 'help.wiki' | translate }}
+      </button>
+    </mat-expansion-panel>
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title> {{ 'help.bug-title' | translate }} </mat-panel-title>
+      </mat-expansion-panel-header>
+      <button
+        mat-button
+        (click)="
+          openUrl('https://github.com/PoE-Overlay-Community/PoE-Overlay-Community-Fork/issues')
+        "
+      >
+        {{ 'help.bug' | translate }}
+      </button>
+    </mat-expansion-panel>
+  </mat-accordion>
 </mat-card>
