--- a/src/app/modules/evaluate/component/evaluate-search-chart/evaluate-search-chart.component.scss
+++ b/src/app/modules/evaluate/component/evaluate-search-chart/evaluate-search-chart.component.scss
@@ -1,4 +1,4 @@
-@import "./../../../../../styles/variables";
+@import './../../../../../styles/variables';
 
 ::ng-deep {
   app-evaluate-search-chart {
