--- a/src/app/modules/evaluate/component/evaluate-search/evaluate-search.component.html
+++ b/src/app/modules/evaluate/component/evaluate-search/evaluate-search.component.html
@@ -1,12 +1,12 @@
 <ng-container *ngIf="(searched$ | async) === false; else searched">
   <div class="clickable" (click)="onSearchClick()">
-    {{'evaluate.run-search' | translate}}
+    {{ 'evaluate.run-search' | translate }}
   </div>
 </ng-container>
 <ng-template #searched>
-  <ng-container *ngIf="(staleCounter$ | async) as counter; else search">
+  <ng-container *ngIf="staleCounter$ | async as counter; else search">
     <div class="clickable" (click)="onStaleCancelClick()">
-      {{'evaluate.stale' | translate}}
+      {{ 'evaluate.stale' | translate }}
     </div>
     <mat-progress-bar mode="determinate" [value]="staleProgress$ | async"></mat-progress-bar>
   </ng-container>
@@ -19,28 +19,42 @@
               <ng-container *ngIf="result$ | async as result; else analyzing">
                 <!-- values -->
                 <ng-container *ngIf="result.values as values">
-                  <div class="clickable values" (click)="onCurrencyClick($event)" (wheel)="onCurrencyWheel($event)"
-                    [title]="'app.clickable' | translate">
+                  <div
+                    class="clickable values"
+                    (click)="onCurrencyClick($event)"
+                    (wheel)="onCurrencyWheel($event)"
+                    [title]="'app.clickable' | translate"
+                  >
                     <div>
-                      <app-currency-frame [label]="'evaluate.mean' | translate" [amount]="values.mean">
+                      <app-currency-frame
+                        [label]="'evaluate.mean' | translate"
+                        [amount]="values.mean"
+                      >
                       </app-currency-frame>
-                      <app-currency-frame [label]="'evaluate.median' | translate" [amount]="values.median">
+                      <app-currency-frame
+                        [label]="'evaluate.median' | translate"
+                        [amount]="values.median"
+                      >
                       </app-currency-frame>
-                      <app-currency-frame [label]="'evaluate.mode' | translate" [amount]="values.mode">
+                      <app-currency-frame
+                        [label]="'evaluate.mode' | translate"
+                        [amount]="values.mode"
+                      >
                       </app-currency-frame>
                     </div>
                     <div>
-                      <app-currency-frame [label]="'evaluate.range' | translate" [currency]="result.currency"
-                        [range]="{ min: values.min, max: values.max }">
+                      <app-currency-frame
+                        [label]="'evaluate.range' | translate"
+                        [currency]="result.currency"
+                        [range]="{ min: values.min, max: values.max }"
+                      >
                       </app-currency-frame>
                     </div>
                   </div>
                 </ng-container>
 
                 <div class="tools">
-                  <span>
-                    {{listings.length}}/{{search.total | number}}
-                  </span>
+                  <span> {{ listings.length }}/{{ search.total | number }} </span>
                   <span class="spacer"></span>
                   <span class="clickable">
                     <mat-icon [class.active]="graph" (click)="graph = true">bar_chart</mat-icon>
@@ -48,13 +62,19 @@
                   </span>
                 </div>
 
-                <app-evaluate-search-chart *ngIf="graph" [result]="result" (amountSelect)="onAmountSelect($event)">
+                <app-evaluate-search-chart
+                  *ngIf="graph"
+                  [result]="result"
+                  (amountSelect)="onAmountSelect($event)"
+                >
                 </app-evaluate-search-chart>
-                <app-evaluate-search-table *ngIf="!graph" [result]="result"
+                <app-evaluate-search-table
+                  *ngIf="!graph"
+                  [result]="result"
                   [original]="settings.evaluateCurrencyOriginal"
-                  (amountSelect)="onAmountSelect($event.amount, $event.currency)">
+                  (amountSelect)="onAmountSelect($event.amount, $event.currency)"
+                >
                 </app-evaluate-search-table>
-
               </ng-container>
               <ng-template #analyzing>
                 <div>{{ 'evaluate.analyzing' | translate }}</div>
@@ -62,21 +82,31 @@
               </ng-template>
             </ng-container>
             <ng-template #canceled>
-              <div class="clickable" (click)="onCurrencyClick($event)" [title]="'app.clickable' | translate">
+              <div
+                class="clickable"
+                (click)="onCurrencyClick($event)"
+                [title]="'app.clickable' | translate"
+              >
                 {{ 'evaluate.canceled' | translate }}
               </div>
             </ng-template>
           </ng-container>
           <ng-template #listing>
             <div class="clickable" (click)="onSearchCancelClick()">
-              {{'evaluate.listings' | translate:{total: search.total | number, count: (count$ | async) | number} }}&nbsp;<span
-                class="delayed">{{ 'evaluate.cancel' | translate }}</span>
+              {{
+                'evaluate.listings'
+                  | translate: { total: search.total | number, count: count$ | async | number }
+              }}&nbsp;<span class="delayed">{{ 'evaluate.cancel' | translate }}</span>
             </div>
             <mat-progress-bar mode="indeterminate"></mat-progress-bar>
           </ng-template>
         </ng-container>
         <ng-template #empty>
-          <div class="clickable" (click)="onCurrencyClick($event)" [title]="'app.clickable' | translate">
+          <div
+            class="clickable"
+            (click)="onCurrencyClick($event)"
+            [title]="'app.clickable' | translate"
+          >
             {{ 'evaluate.empty' | translate }}
           </div>
         </ng-template>
