--- a/src/app/modules/evaluate/component/evaluate-settings/evaluate-settings.component.scss
+++ b/src/app/modules/evaluate/component/evaluate-settings/evaluate-settings.component.scss
@@ -1,4 +1,4 @@
-@import "./../../../../../styles/variables";
+@import './../../../../../styles/variables';
 
 $label-color: rgba(200, 200, 200, 0.54);
 
