--- a/src/app/modules/misc/component/misc-settings/misc-settings.component.html
+++ b/src/app/modules/misc/component/misc-settings/misc-settings.component.html
@@ -3,10 +3,15 @@
     <app-card [title]="'misc.wiki' | translate">
       <div class="row">
         <div class="col">
-          <app-accelerator [label]="'misc.open-wiki' | translate" [(value)]="settings.miscWikiKeybinding">
+          <app-accelerator
+            [label]="'misc.open-wiki' | translate"
+            [(value)]="settings.miscWikiKeybinding"
+          >
           </app-accelerator>
-          <app-accelerator [label]="'misc.open-wiki-external' | translate"
-            [(value)]="settings.miscWikiExternalKeybinding">
+          <app-accelerator
+            [label]="'misc.open-wiki-external' | translate"
+            [(value)]="settings.miscWikiExternalKeybinding"
+          >
           </app-accelerator>
         </div>
       </div>
@@ -16,10 +21,15 @@
     <app-card [title]="'misc.poedb' | translate">
       <div class="row">
         <div class="col">
-          <app-accelerator [label]="'misc.open-poedb' | translate" [(value)]="settings.miscPoedbKeybinding">
+          <app-accelerator
+            [label]="'misc.open-poedb' | translate"
+            [(value)]="settings.miscPoedbKeybinding"
+          >
           </app-accelerator>
-          <app-accelerator [label]="'misc.open-poedb-external' | translate"
-            [(value)]="settings.miscPoedbExternalKeybinding">
+          <app-accelerator
+            [label]="'misc.open-poedb-external' | translate"
+            [(value)]="settings.miscPoedbExternalKeybinding"
+          >
           </app-accelerator>
         </div>
       </div>
@@ -30,14 +40,17 @@
       <div class="row">
         <div class="col">
           <mat-form-field>
-            <mat-label>{{'misc.navigation' | translate}} (CTRL + SCROLL)</mat-label>
+            <mat-label>{{ 'misc.navigation' | translate }} (CTRL + SCROLL)</mat-label>
             <mat-select [(value)]="settings.miscStashNavigationMode">
               <mat-option *ngFor="let navigation of navigations.keys" [value]="navigation">
-                {{'misc.navigations.' + (navigations.values[navigation] | lowercase) | translate}}
+                {{ 'misc.navigations.' + (navigations.values[navigation] | lowercase) | translate }}
               </mat-option>
             </mat-select>
           </mat-form-field>
-          <app-accelerator [label]="'misc.highlight' | translate" [(value)]="settings.miscStashHighlightKeybinding">
+          <app-accelerator
+            [label]="'misc.highlight' | translate"
+            [(value)]="settings.miscStashHighlightKeybinding"
+          >
           </app-accelerator>
         </div>
       </div>
