--- a/src/app/shared/module/poe/component/currency-frame/currency-frame.component.scss
+++ b/src/app/shared/module/poe/component/currency-frame/currency-frame.component.scss
@@ -1,4 +1,4 @@
-@import "./../../../../../../styles/variables";
+@import './../../../../../../styles/variables';
 
 .content {
   display: inline-flex;
