--- a/src/app/shared/module/poe/component/item-frame-query/item-frame-query.component.html
+++ b/src/app/shared/module/poe/component/item-frame-query/item-frame-query.component.html
@@ -1,3 +1,7 @@
-<div [class.query]="!disabled" [class.active]="property" (click)="!disabled && onQueryToggleClick($event)">
-    <ng-content></ng-content>
+<div
+  [class.query]="!disabled"
+  [class.active]="property"
+  (click)="!disabled && onQueryToggleClick($event)"
+>
+  <ng-content></ng-content>
 </div>
