--- a/src/app/shared/module/poe/component/item-frame-value/item-frame-value.component.scss
+++ b/src/app/shared/module/poe/component/item-frame-value/item-frame-value.component.scss
@@ -1,4 +1,4 @@
-@import "./../../../../../../styles/variables";
+@import './../../../../../../styles/variables';
 
 span {
   display: inline-block;
