--- a/src/app/shared/module/poe/component/item-frame/item-frame.component.scss
+++ b/src/app/shared/module/poe/component/item-frame/item-frame.component.scss
@@ -1,4 +1,4 @@
-@import "./../../../../../../styles/variables";
+@import './../../../../../../styles/variables';
 
 .frame {
   background: rgba(0, 0, 0, 0.8);
