--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,13 @@
-@import "./styles/bootstrap";
-@import "./styles/theme";
-@import "./styles/scrollbar";
-@import "./styles/variables";
+@import './styles/bootstrap';
+@import './styles/theme';
+@import './styles/scrollbar';
+@import './styles/variables';
 
 html,
 body {
   height: 100%;
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
   user-select: none;
 }
 
