--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -14,7 +14,7 @@ $light-orange: #aa9e82;
 $red: #e63244;
 $pink: #e745ad;
 $aqua: #1ba29b;
-$black-transparent: rgba(0,0,0,0.8);
+$black-transparent: rgba(0, 0, 0, 0.8);
 
 /* colors */
 
