--- a/src/app/modules/evaluate/component/evaluate-options/evaluate-options.component.scss
+++ b/src/app/modules/evaluate/component/evaluate-options/evaluate-options.component.scss
@@ -4,6 +4,7 @@
   position: absolute;
   top: 3px;
   left: 3px;
+  text-align: left;
 
   .popover {
     display: flex;
@@ -22,6 +23,7 @@
         outline-style: solid;
         outline-width: 1px;
       }
+      line-height: 24px;
     }
 
     .divider {
@@ -31,4 +33,18 @@
       margin-bottom: 5px;
     }
   }
+}
+
+.mat-icon-button {
+  height: 24px;
+  width: 24px;
+  line-height: 24px;
+}
+
+.button-text {
+  font-family: FontinSmallCaps;
+}
+
+.mat-slide-toggle {
+  margin-bottom: 0;
 }
