--- a/src/assets/fonts/fonts.css
+++ b/src/assets/fonts/fonts.css
@@ -1,8 +1,6 @@
 @font-face {
-    font-family: "FontinSmallCaps";
-    font-weight: normal;
-    font-style: normal;
-    src: url(fontin-smallcaps-webfont.woff) format("woff");
-  }
-  
-  
+  font-family: 'FontinSmallCaps';
+  font-weight: normal;
+  font-style: normal;
+  src: url(fontin-smallcaps-webfont.woff) format('woff');
+}
