Display name of rare items in a double header, just like uniques. Improve spacing of double header (#51)
Co-authored-by: Kevin Strasters <kevin.strasters@gmail.com>

--- a/src/app/shared/module/poe/component/item-frame-header/item-frame-header.component.html
+++ b/src/app/shared/module/poe/component/item-frame-header/item-frame-header.component.html
@@ -1,11 +1,11 @@
-<div [class]="'header ' + (item.rarity || '')" [class.double]="item.nameId && item.typeId">
-  <div class="name" *ngIf="item.nameId">
+<div [class]="'header ' + (item.rarity || '')" [class.double]="item.name && item.typeId">
+  <div class="name" *ngIf="item.name">
     <app-item-frame-query
-      [(property)]="queryItem.nameId"
-      [value]="item.nameId"
+      [(property)]="queryItem.name"
+      [value]="item.name"
       [disabled]="!queryable"
     >
-      <span> {{ item.nameId | word: language }}</span>
+      <span> {{ item.name }}</span>
     </app-item-frame-query>
   </div>
   <div class="name" *ngIf="item.typeId">
