Increase min-height only when popover is open (#55)
* pass popover open state up to impact min-height

* fix type mismatch

--- a/src/app/modules/evaluate/component/evaluate-dialog/evaluate-dialog.component.html
+++ b/src/app/modules/evaluate/component/evaluate-dialog/evaluate-dialog.component.html
@@ -10,12 +10,14 @@
     [propertyMinRange]="data.settings.evaluatePropertyMinRange / 100"
     [propertyMaxRange]="data.settings.evaluatePropertyMaxRange / 100"
     [opacity]="data.settings.dialogOpacity"
+    [filterOptionsOpen]="filterOptionsOpen"
   >
     <ng-container *ngIf="currencies$ | async as currencies; else loading">
       <app-evaluate-options
         [options]="options"
         (optionsChange)="onOptionsChange($event)"
         (resetTrigger)="onReset()"
+        (toggleOpen)="onToggleOpen($event)"
       >
       </app-evaluate-options>
       <ng-container *ngIf="rate$ | async; else prediction">
