--- a/src/app/shared/module/poe/component/item-frame/item-frame.component.html
+++ b/src/app/shared/module/poe/component/item-frame/item-frame.component.html
@@ -12,7 +12,7 @@
   >
   </app-item-frame-header>
 
-  <div class="detail">
+  <div class="detail" [class.popover-open]="filterOptionsOpen">
     <!-- properties -->
     <ng-container *ngIf="item.properties">
       <app-item-frame-properties
