--- a/src/app/shared/module/poe/component/item-frame/item-frame.component.scss
+++ b/src/app/shared/module/poe/component/item-frame/item-frame.component.scss
@@ -15,7 +15,11 @@
     position: relative;
     padding: 2px;
     min-width: 396px;
-    min-height: 205px;
+    min-height: 115px;
     white-space: pre;
+
+    &.popover-open {
+      min-height: 200px;
+    }
   }
 }
