Feature/evaluate metamorph samples (#70)
* Added annointment stats as indistinguishable (this fixed double-annointed items)

* Implemented Metamorph Sample evaluation; Updated the evaluate dialog to show 'monster' stats; Updated the evaluate

--- a/src/app/modules/evaluate/component/evaluate-settings/evaluate-settings.component.scss
+++ b/src/app/modules/evaluate/component/evaluate-settings/evaluate-settings.component.scss
@@ -74,6 +74,10 @@ label {
     &.fractured {
       background-color: $fractured;
     }
+
+    &.monster {
+      background-color: $monster;
+    }
   }
 }
 
