--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,6 +5,7 @@ $implicit: #65621e;
 $crafted: #0060bf;
 $enchant: #8b579c;
 $fractured: #a29162;
+$monster: #bd1818;
 
 $purple: #88f;
 $blue: #b4b4ff;
