Adjust colors for better contrast

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -97,3 +97,24 @@ mat-card {
     background: none;
   }
 }
+
+/* Set of colors */
+.mat-red{
+  background-color: $red;
+}
+
+.mat-orange{
+  background-color: $orange;
+}
+
+.mat-green{
+  background-color: $green;
+}
+
+.mat-blue {
+  background-color: $blue;
+}
+
+.mat-purple {
+  background: #820b78;
+}
