Feature/improved prophecies (#99)
* Added support for Vials, Scarabs and Delirium Orbs in the Item Overview service

* Implemented retrieval of gemLevel, gemQuality and corrupted values from poeninja; Added filtering for them when a gem is being selected; Implemented skill gem price overview

* Added a 'discriminator' option to the trade 'query' interface for 'name' and 'type'

* Changed how 'queryable' items are determined for the item-frame component

* Updated the item-frame-header component to support a 'prophecies' look

* Updated the rarity parser to parse prophecy names (some special case prophecies were added too); Added a new prophecy parser to obtain the prophecy text; Updated the item exchange rate service to take prophecy text into account

* Updated the item-frame-properties to show the prophecy text

* Fixed the item-exchange-rate servie unit-test (as it was using a Prophecy) and added a second test with a Currency item

* Changed how ItemProperties are attached to an Item in the item-exchange-rate service spec

* Fixed an equality check in the item-exchange-rate service for prophecies

* Fixed the poe-ninja test cache (used an actual dump from the poe-ninja API); Added a cachee for poe-ninja currency too

* Removed the currency cache again; Fixed the prophecy cache (it's not the kind of cache I thought it was)

* Fixed a typo

--- a/src/app/shared/module/poe/component/item-frame-header/item-frame-header.component.html
+++ b/src/app/shared/module/poe/component/item-frame-header/item-frame-header.component.html
@@ -1,4 +1,4 @@
-<div [class]="'header ' + (item.rarity || '')" [class.double]="item.name && item.typeId">
+<div [class]="getHeaderClass(item)">
   <div class="name" *ngIf="item.name">
     <app-item-frame-query [(property)]="queryItem.name" [value]="item.name" [disabled]="!queryable">
       <span> {{ item.name }}</span>
