--- a/src/app/shared/module/poe/component/item-frame-properties/item-frame-properties.component.html
+++ b/src/app/shared/module/poe/component/item-frame-properties/item-frame-properties.component.html
@@ -122,6 +122,9 @@
       >
       </ng-container>
     </ng-container>
+    <ng-container *ngSwitchCase="'prophecyText'">
+      <div class="white firstLine">{{ prop }}</div>
+    </ng-container>
     <ng-container *ngSwitchCase="'gemLevel'">
       <ng-container
         *ngTemplateOutlet="
