--- a/src/app/shared/module/poe/component/item-frame-header/item-frame-header.component.scss
+++ b/src/app/shared/module/poe/component/item-frame-header/item-frame-header.component.scss
@@ -102,4 +102,14 @@
       color: $aqua;
     }
   }
+
+  &.prophecy {
+    background: url(../../../../../../assets/poe/item/header-prophecy-left.png) top left no-repeat,
+      url(../../../../../../assets/poe/item/header-prophecy-right.png) top right no-repeat,
+      url(../../../../../../assets/poe/item/header-prophecy-middle.png) top center repeat-x;
+
+    > .name {
+      color: $indigo;
+    }
+  }
 }
