--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -15,6 +15,7 @@ $light-orange: #aa9e82;
 $red: #e63244;
 $pink: #e745ad;
 $aqua: #1ba29b;
+$indigo: #b54bff;
 $black-transparent: rgba(0, 0, 0, 0.8);
 
 /* colors */
