Add the stash grid component

--- a/src/app/modules/trade/components/trade-offers-container/trade-offers-container.component.html
+++ b/src/app/modules/trade/components/trade-offers-container/trade-offers-container.component.html
@@ -15,3 +15,7 @@
     *ngIf="i < 8"></app-trade-offer>
   </ng-container>
 </div>
+
+<div class="grid">
+  <app-trade-stash-grid></app-trade-stash-grid>
+</div>
