Add the button to highlight item with the grid

--- a/src/app/modules/trade/components/trade-offers-container/trade-offers-container.component.css
+++ b/src/app/modules/trade/components/trade-offers-container/trade-offers-container.component.css
@@ -4,3 +4,10 @@
     display:flex;
     justify-content: center;
 }
+
+.btn-item-location{
+    position: absolute;
+    bottom: 75%;
+    left: 4%;
+    opacity: 0.8;
+}
