--- a/src/app/modules/trade/components/trade-stash-grid/trade-stash-grid.component.html
+++ b/src/app/modules/trade/components/trade-stash-grid/trade-stash-grid.component.html
@@ -1,1 +1,5 @@
-<p>I'm the trade stash grid</p>
+<div class="row" *ngFor="let row of [1,2,3,4,5,6,7,8,9,10,11,12]; let rowIndex = index">
+    <div class="col" *ngFor="let col of [1,2,3,4,5,6,7,8,9,10,11,12]; let colIndex = index">
+        <div class="box" *ngIf="location && location.left === colIndex && location.top === rowIndex"></div>
+    </div>
+</div>
