--- a/src/app/modules/trade/components/trade-offers-container/trade-offers-container.component.html
+++ b/src/app/modules/trade/components/trade-offers-container/trade-offers-container.component.html
@@ -21,6 +21,7 @@
 </div>
 
 <div *ngIf="currentOffer" class="item-location">
-  <p class="lbl-item-location">Tab "SELL"<br>Left: 8, Top: 7</p>
-  <button mat-raised-button (click)="highlightItem()">{{showGrid ? 'Hide' : 'Show'}}</button>
+  <p class="lbl-item-location">Tab "{{currentOffer.itemLocation.stashTabName}}"<br>Left: {{currentOffer.itemLocation.left}}, Top: {{currentOffer.itemLocation.top}}</p>
+  <br>
+  <button class="btn-highlight-item" mat-raised-button (click)="highlightItem()">{{showGrid ? 'Hide' : 'Show'}}</button>
 </div>
