--- a/src/app/modules/trade/components/trade-stash-grid/trade-stash-grid.component.scss
+++ b/src/app/modules/trade/components/trade-stash-grid/trade-stash-grid.component.scss
@@ -11,7 +11,45 @@
 }
 
 .box {
-    border: 2px solid yellow;
     width: 100%;
     height: 100%;
+}
+
+.box-highlight{
+    border-color: yellow;
+    border-style: solid;
+}
+
+$border-width: 5px;
+
+.box-col-left {
+    border-top-width: 0;
+    border-bottom-width: 0;
+    border-left-width: $border-width !important;
+    border-right-width: 0;
+}
+
+.box-col-right {
+    border-top-width: 0;
+    border-bottom-width: 0;
+    border-left-width: 0;
+    border-right-width: $border-width !important;
+}
+
+.box-row-top {
+    border-top-width: $border-width !important;
+    border-bottom-width: 0;
+    border-left-width: 0;
+    border-right-width: 0;
+}
+
+.box-row-bottom {
+    border-top-width: 0;
+    border-bottom-width: $border-width !important;
+    border-left-width: 0;
+    border-right-width: 0;
+}
+
+.dark-box{
+    background-color: rgba(0,0,0,0.5);
 }
