--- a/src/app/modules/trade/components/trade-stash-grid/trade-stash-grid.component.scss
+++ b/src/app/modules/trade/components/trade-stash-grid/trade-stash-grid.component.scss
@@ -53,3 +53,7 @@ $border-width: 5px;
 .dark-box{
     background-color: rgba(0,0,0,0.5);
 }
+
+.darker-box{
+    background-color: rgba(0,0,0,0.8);
+}
