--- a/src/app/modules/trade/components/trade-offers-container/trade-offers-container.component.css
+++ b/src/app/modules/trade/components/trade-offers-container/trade-offers-container.component.css
@@ -32,7 +32,25 @@
 
 .grid{
     position: absolute;
-    top: 161px;
-    left: 15px;
     color: white;
+}
+
+.btn-adjust-grid{
+    position: absolute;
+    top: 50px;
+    left: 50px;
+    border: 2px yellow solid;
+    color: yellow;
+}
+
+.lbl-adjust-message{
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translateX(-40%) translateY(-100%);
+    background-color: #232323;
+    color: white;
+    border: 2px solid white;
+    padding: 5px;
+    border-radius: 4px;
 }
