--- a/src/app/modules/trade/components/trade-offers-container/trade-offers-container.component.css
+++ b/src/app/modules/trade/components/trade-offers-container/trade-offers-container.component.css
@@ -45,9 +45,9 @@
 
 .lbl-adjust-message{
     position: absolute;
-    top:50%;
-    left:50%;
-    transform: translateX(-40%) translateY(-100%);
+    top: 50%;
+    right: 0;
+    transform: translateY(-100%);
     background-color: #232323;
     color: white;
     border: 2px solid white;
