--- a/src/app/modules/trade/components/trade-stash-grid/trade-stash-grid.component.html
+++ b/src/app/modules/trade/components/trade-stash-grid/trade-stash-grid.component.html
@@ -1,13 +1,13 @@
-<div class="grid">
-    <div class="row" [style.height]="pxHeight()" *ngFor="let row of [1,2,3,4,5,6,7,8,9,10,11,12]; let rowIndex = index">
-        <div class="col" [style.width]="pxWidth()" *ngFor="let col of [1,2,3,4,5,6,7,8,9,10,11,12]; let colIndex = index">
+<div class="grid ignore-mouse">
+    <div class="row ignore-mouse" [style.height]="pxHeight()" *ngFor="let row of [1,2,3,4,5,6,7,8,9,10,11,12]; let rowIndex = index">
+        <div class="col ignore-mouse" [style.width]="pxWidth()" *ngFor="let col of [1,2,3,4,5,6,7,8,9,10,11,12]; let colIndex = index">
             <ng-container *ngIf="demo; else notDemo">
                 <div class="box box-highlight box-small-left box-small-right box-small-bottom box-small-top"></div>
             </ng-container>
             <ng-template #notDemo>
                 <ng-container
                     *ngIf="location && (location.left <= colIndex + 1 && location.left + location.width > colIndex + 1) && (location.top <= rowIndex + 1 && location.top + location.height > rowIndex + 1); else darkBox">
-                    <div class="box box-highlight" [class.box-col-left]="location.left === colIndex + 1"
+                    <div class="box box-highlight ignore-mouse" [class.box-col-left]="location.left === colIndex + 1"
                         [class.box-col-right]="location.left + location.width - 1 === colIndex + 1"
                         [class.box-row-top]="location.top === rowIndex + 1"
                         [class.box-row-bottom]="location.top + location.height - 1 === rowIndex + 1"></div>
