--- a/src/app/modules/trade/components/trade-offers-container/trade-offers-container.component.css
+++ b/src/app/modules/trade/components/trade-offers-container/trade-offers-container.component.css
@@ -54,3 +54,11 @@
     padding: 5px;
     border-radius: 4px;
 }
+
+.icon-adjust-grid{
+    position: absolute;
+    left: 2px;
+    bottom: 10px;
+    color:gray;
+    cursor: pointer;
+}
