--- a/src/app/shared/module/poe/component/item-frame-properties/item-frame-properties.component.html
+++ b/src/app/shared/module/poe/component/item-frame-properties/item-frame-properties.component.html
@@ -196,13 +196,24 @@
     </ng-container>
     <ng-container *ngSwitchCase="'durability'">
       <ng-container
-        *ngTemplateOutlet="value; context: { prop: prop, name: property, key: 'ItemDisplayHarvestBoosterUses', range: false }"
+        *ngTemplateOutlet="
+          value;
+          context: {
+            prop: prop,
+            name: property,
+            key: 'ItemDisplayHarvestBoosterUses',
+            range: false
+          }
+        "
       >
       </ng-container>
     </ng-container>
     <ng-container *ngSwitchCase="'storedExperience'">
       <ng-container
-        *ngTemplateOutlet="value; context: { prop: prop, name: property, key: 'ItemDisplayStoredExperience', range: false }"
+        *ngTemplateOutlet="
+          value;
+          context: { prop: prop, name: property, key: 'ItemDisplayStoredExperience', range: false }
+        "
       >
       </ng-container>
     </ng-container>
