add app setting for disabling in game browser option (#123)
* add app setting for disabling in game browser option
add related i18n for new phrases

* fix missing comma

--- a/src/app/modules/evaluate/component/evaluate-exchange-rate/evaluate-exchange-rate.component.html
+++ b/src/app/modules/evaluate/component/evaluate-exchange-rate/evaluate-exchange-rate.component.html
@@ -62,7 +62,12 @@
           <div
             class="values clickable"
             (click)="onClick($event)"
-            [title]="'app.clickable' | translate"
+            [title]="
+              (settings.evaluateBrowserAlwaysExternal
+                ? 'app.clickable-external-only'
+                : 'app.clickable'
+              ) | translate
+            "
           >
             <span
               class="value"
