--- a/src/app/modules/evaluate/component/evaluate-settings/evaluate-settings.component.html
+++ b/src/app/modules/evaluate/component/evaluate-settings/evaluate-settings.component.html
@@ -136,6 +136,19 @@
   </div>
 </app-card>
 
+<app-card [title]="'evaluate.browser' | translate">
+  <div class="row">
+    <div class="col-xs-12">
+      <mat-slide-toggle
+        [checked]="settings.evaluateBrowserAlwaysExternal"
+        (change)="settings.evaluateBrowserAlwaysExternal = $event.checked"
+      >
+        {{ 'evaluate.disable-browser-overlay' | translate }}
+      </mat-slide-toggle>
+    </div>
+  </div>
+</app-card>
+
 <mat-card class="profiles">
   <mat-label>{{ 'evaluate.profiles' | translate }}</mat-label>
   <mat-tab-group>
