fix changelog typo (#128)
fix angular binding that was missed

--- a/src/app/modules/evaluate/component/evaluate-dialog/evaluate-dialog.component.html
+++ b/src/app/modules/evaluate/component/evaluate-dialog/evaluate-dialog.component.html
@@ -25,6 +25,7 @@
           [options]="options"
           [optionsChange]="optionsChange"
           [item]="data.item"
+          [settings]="data.settings"
           [currencies]="currencies"
           (evaluateResult)="onEvaluateResult($event)"
         >
